--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,16 @@
 							<transformers>
 								<transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer"/>
 							</transformers>
+							<filters>
+								<filter>
+									<artifact>*:*</artifact>
+									<excludes>
+										<exclude>META-INF/*.SF</exclude>
+										<exclude>META-INF/*.DSA</exclude>
+										<exclude>META-INF/*.RSA</exclude>
+									</excludes>
+								</filter>
+							</filters>
 						</configuration>
 					</execution>
 				</executions>
@@ -56,7 +66,7 @@
 		</plugins>
 	</build>
 	<properties>
-		<hadoop.version>2.7.3</hadoop.version>
+		<hadoop.version>2.7.4</hadoop.version>
 	</properties>
 	<dependencies>
 
