--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,9 @@
 		</plugins>
 	</build>
 	<properties>
-		<hadoop.version>2.7.4</hadoop.version>
+		<hadoop.version>
+
+		</hadoop.version>
 	</properties>
 	<dependencies>
 
